--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 user-registry.age=18
+
+spring.datasource.url=jdbc:mysql://localhost:3306/userDB
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
